fix: white background in toolbar in dark mode #173

--- a/src/scss/components/_components.editor.scss
+++ b/src/scss/components/_components.editor.scss
@@ -63,6 +63,7 @@
   .tox .tox-toolbar,
   .tox .tox-toolbar__overflow,
   .tox .tox-toolbar__primary,
+  .tox-editor-header,
   .tox-editor-header .tox-toolbar__primary,
   .tox .tox-toolbar-overlord,
   .tox.tox-tinymce-aux .tox-toolbar__overflow,
